# Workshop-Python

./: database.py  main.py
telebot-and-sqlalchemy/: database.db  database.py  main.py  notes.ipynb  pyproject.toml
