[tool.poetry]
name = "telebot-and-sqlalchemy"
version = "0.1.0"
description = "Telegram bot and SQLAlchemy for workshop-python"
authors = ["Timur Lidzhiev <trlidzhiev@edu.hse.ru>"]
license = "CC"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytelegrambotapi = "^4.11.0"
sqlalchemy = "^2.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
